seite50-istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: seite50
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "seite50.lab"
    - "api.seite50.lab"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: seite50-frontend
spec:
  hosts:
  - "seite50.lab"
  gateways:
  - seite50
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: seite50-frontend
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: seite50-backend
spec:
  hosts:
  - "api.seite50.lab"
  gateways:
  - seite50
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        port:
          number: 8080
        host: seite50-backend
